# MuLi

./: config.json5.example  pyproject.toml
config_manage/: manager.py
core/agents/: MuLi.py
core/prompts/: MuLi.txt
llms/: AIModel.py  JsonModel.py
llms/providers/: __init__.py  openai.py
response/: AIModel.py  JsonModel.py
response/providers/: __init__.py  deepseek.py
