[project]
name = "MuLi"
version = "0.1.0"
description = "沐璃，一个强大的拟人AI助手"
authors = [
    {name = "Null", email = "pylindex@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.7.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = { index = "pytorch_rocm64" }
torchvision = { index = "pytorch_rocm64" }

[[tool.uv.index]]
name = "pytorch_rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
